# java_unit_test_predictor

./: .gitignore  README  pyproject.toml  run_tests.py
Solution/: pom.xml
TargetSource/: pom.xml
analyzer/: ByteCode.py  DynamicAnalyzer.py  ProjectManager.py  SyntaxAnalyzer.py  analyer.py  bounds.py  c.json  c1.json  dependency_graphs.py  interface.py  main.py  test_dependency_graphs.py  test_detector.py
analyzer/data/: srcs.csv  test_dep.json  tests.csv
analyzer/data/olds-src/: Conditions.java  ConditionsChanges1.java  ConditionsChanges2.java  ConditionsChanges3.java  Invoker.java  LoopsChanges2.java  LoopsChanges3.java  (+4 more)
analyzer/dependency_graphs/: __init__.py  bounds.py  dependency_graphs.py  test_dependency_graphs.py
analyzer/tests/: test_DynamicAnalyzer.py  test_dependency_graphs.py
evaluation_traces/: GetA_Test.json  GetB_Test.json  GetC_Test.json  GetD_Test.json  GetE_Test.json  IfElse_False_Test.json  IfElse_True_Test.json  NestedCalls_Test.json  SumAB_Test.json  SumAC_Test.json  SumBD_Test.json  SumDE_Test.json  SumEE_Test.json  SumTwo_AA_Test.json  SumTwo_AB_Test.json  SumTwo_AC_Test.json  SumTwo_AD_Test.json  SumTwo_AE_Test.json  SumTwo_BA_Test.json  SumTwo_BB_Test.json  SumTwo_BC_Test.json  SumTwo_BD_Test.json  SumTwo_BE_Test.json  SumTwo_CA_Test.json  SumTwo_CB_Test.json  SumTwo_CC_Test.json  SumTwo_CD_Test.json  SumTwo_CE_Test.json  SumTwo_DA_Test.json  SumTwo_DB_Test.json  SumTwo_DC_Test.json  SumTwo_DD_Test.json  SumTwo_DE_Test.json  SumTwo_EA_Test.json  SumTwo_EB_Test.json  SumTwo_EC_Test.json  SumTwo_ED_Test.json  SumTwo_EE_Test.json
(+62 files in other folders)
